--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Tele-Book",
     "description": "Una agenda sencilla que funciona sin conexion.",
     "lang": "es-ES",
-    "start_url": ".",
-    "scope": ".",
+    "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#e8ded5",
     "theme_color": "#000000",
